# VM

./: CMakeLists.txt  LICENSE  README.md  log.txt  main.cpp
resources/: icon.rc  log.txt  log2.txt
